Json database added and JsonCreate method added  - I made special class JsonSetup for creating totaly random json file based on our Models.
 - I created Json file "data.json" and i filled it with list of randomly generated Players with heros and items. (using my method JsonCreate)

 - This file is for our further tasks. Enjoy it!

I lerned this "know how" about creating jsons file from Marcin Dąbrowski and I "improved" (automated) the mechanism of creating jsons.

--- a/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
+++ b/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
@@ -6,6 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Model\Items\data.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Data\data.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Windows.Extensions" Version="6.0.0" />
   </ItemGroup>
 
