--- a/wizards/Wizards.GUI/Wizards.GUI.csproj
+++ b/wizards/Wizards.GUI/Wizards.GUI.csproj
@@ -1,9 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Text\Creator.json" />
+    <None Remove="Text\Menu.json" />
+    <None Remove="Text\Value Errors.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Text\Json\Creator.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Text\Json\Menu.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Text\Json\Value Errors.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
@@ -18,6 +36,10 @@
     <None Update="MenuMusic-1.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Screen\" />
   </ItemGroup>
 
 </Project>
