--- a/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
+++ b/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
@@ -10,14 +10,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Data\data.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Windows.Extensions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.Windows.Extensions" Version="6.0.0" />
+    <Compile Update="FilesOperations.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
