Rework Validator, ValueExceptions, extend and rework TextRepository.

--- a/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
+++ b/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
@@ -9,6 +9,7 @@
     <None Remove="Model\Items\data.json" />
     <None Remove="Text\Json\Creator.json" />
     <None Remove="Text\Json\Menu.json" />
+    <None Remove="Text\Json\RestrictedWords.json" />
     <None Remove="Text\Json\Value Errors.json" />
   </ItemGroup>
 
@@ -20,6 +21,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Text\Json\Menu.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Text\Json\RestrictedWords.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Text\Json\Value Errors.json">
