--- a/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
+++ b/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
@@ -10,6 +10,7 @@
     <None Remove="Text\Json\Creator.json" />
     <None Remove="Text\Json\Menu.json" />
     <None Remove="Text\Json\RestrictedWords.json" />
+    <None Remove="Text\Json\Selectors.json" />
     <None Remove="Text\Json\Value Errors.json" />
   </ItemGroup>
 
@@ -24,6 +25,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Text\Json\RestrictedWords.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Text\Json\Selectors.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Text\Json\Value Errors.json">
