Implement Model Creators into Menu

--- a/wizards/Wizards.GUI/Wizards.GUI.csproj
+++ b/wizards/Wizards.GUI/Wizards.GUI.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Selectors\" />
     <Folder Include="UserInput\" />
     <Folder Include="Screen\" />
   </ItemGroup>
