Create Validation Tasks, Edit ValueErrors, Modify InvalidValueException

--- a/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
+++ b/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
@@ -49,4 +49,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\ModelsValidation\ValidationTasks\" />
+  </ItemGroup>
+
 </Project>
