Add ValidationSettingsRepository, and large refactor all repositories
 - Move all repositories to Repositories folder
 - Rename Repository to GameDataRepository
 - Clean up ModelsValidation and sort classes to proper folders

--- a/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
+++ b/wizards/Wizards.BusinessLogic/Wizards.BusinessLogic.csproj
@@ -7,27 +7,27 @@
 
   <ItemGroup>
     <None Remove="Model\Items\data.json" />
-    <None Remove="Text\Json\Creator.json" />
-    <None Remove="Text\Json\Menu.json" />
-    <None Remove="Text\Json\RestrictedWords.json" />
-    <None Remove="Text\Json\Selectors.json" />
-    <None Remove="Text\Json\Value Errors.json" />
+    <None Remove="Repositories\Text\Json\Creator.json" />
+    <None Remove="Repositories\Text\Json\Menu.json" />
+    <None Remove="Repositories\Text\Json\RestrictedWords.json" />
+    <None Remove="Repositories\Text\Json\Selectors.json" />
+    <None Remove="Repositories\Text\Json\Value Errors.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Text\Json\Creator.json">
+    <Content Include="Repositories\Text\Json\Creator.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Text\Json\Menu.json">
+    <Content Include="Repositories\Text\Json\Menu.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Text\Json\RestrictedWords.json">
+    <Content Include="Repositories\Text\Json\RestrictedWords.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Text\Json\Selectors.json">
+    <Content Include="Repositories\Text\Json\Selectors.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Text\Json\Value Errors.json">
+    <Content Include="Repositories\Text\Json\Value Errors.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -47,10 +47,6 @@
     <None Update="music.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\ModelsValidation\Elements\XML\" />
   </ItemGroup>
 
 </Project>
