--- a/wizards/WizardsWeb/appsettings.json
+++ b/wizards/WizardsWeb/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WizardDatabase": "Server=localhost;Database=WizardDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
