--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Wizard.Services\Wizards.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Hero\" />
+  </ItemGroup>
+
 </Project>
