Add HeroValidator with settings, Hero Service; Make injections;

--- a/wizards/Wizard.Services/Wizards.Services.csproj
+++ b/wizards/Wizard.Services/Wizards.Services.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Wizards.Repository\Wizards.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="HeroService\" />
+  </ItemGroup>
+
 </Project>
