Add HeroDetailsModelView; Add ModelViews for Hero Properties; Add Details View;

--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Wizard.Services\Wizards.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ModelViews\HeroModelViews\Properties\" />
+  </ItemGroup>
+
 </Project>
