--- a/wizards/WizardsWeb/appsettings.json
+++ b/wizards/WizardsWeb/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "WizardDatabase": "Server=localhost;Database=WizardDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "WizardDatabase": "Server=localhost;Database=WizardDB;Trusted_Connection=True;MultipleActiveResultSets=True;",
+    "WizardsWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WizardsWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
