add search by username

--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="ModelViews\HeroModelViews\Properties\" />
+    <Folder Include="ModelViews\PlayerDetailsDto\" />
   </ItemGroup>
 
 </Project>
