--- a/wizards/Wizard.Services/Wizards.Services.csproj
+++ b/wizards/Wizard.Services/Wizards.Services.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Factories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.7" />
+  </ItemGroup>
+
 </Project>
