--- a/wizards/Wizard.Services/Wizards.Services.csproj
+++ b/wizards/Wizard.Services/Wizards.Services.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <Folder Include="HeroService\" />
     <Folder Include="Factories\" />
+    <Folder Include="AuthorizationElements\" />
   </ItemGroup>
 
   <ItemGroup>
