--- a/wizards/Wizard.Services/Wizards.Services.csproj
+++ b/wizards/Wizard.Services/Wizards.Services.csproj
@@ -12,8 +12,7 @@
 
   <ItemGroup>
     <Folder Include="HeroService\" />
-    <Folder Include="Factories\" />
-    <Folder Include="Selector\" />
+    <Folder Include="AuthorizationElements\Selector\" />
   </ItemGroup>
 
   <ItemGroup>
