Create Seed for DataBase;

--- a/wizards/Wizards.Repository/Wizards.Repository.csproj
+++ b/wizards/Wizards.Repository/Wizards.Repository.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="DbConfiguration\" />
     <Folder Include="Repository\" />
   </ItemGroup>
 
