--- a/wizards/Wizards.Core/Wizards.Core.csproj
+++ b/wizards/Wizards.Core/Wizards.Core.csproj
@@ -14,5 +14,6 @@
   
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.7" />
 	</ItemGroup>
 </Project>
