--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ModelViews\PlayerDetailsDto\**" />
+    <Content Remove="ModelViews\PlayerDetailsDto\**" />
+    <EmbeddedResource Remove="ModelViews\PlayerDetailsDto\**" />
+    <None Remove="ModelViews\PlayerDetailsDto\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.7" />
@@ -30,7 +37,6 @@
 
   <ItemGroup>
     <Folder Include="ModelViews\HeroModelViews\Properties\" />
-    <Folder Include="ModelViews\PlayerDetailsDto\" />
   </ItemGroup>
 
 </Project>
