Add Wizards.GamePlay project; Set Dependencies; Add Skill and HeroSkill; Adjust Namespaces;

--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Wizard.Services\Wizards.Services.csproj" />
+    <ProjectReference Include="..\Wizards.GamePlay\Wizards.GamePlay.csproj" />
   </ItemGroup>
 
   <ItemGroup>
