Add extension methods for Enemy; Add privater methos in Combat service; Add Random number Provider;

--- a/wizards/Wizards.GamePlay/Wizards.GamePlay.csproj
+++ b/wizards/Wizards.GamePlay/Wizards.GamePlay.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Wizards.Core\Wizards.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
