Services registration spread to extension method in projects;

--- a/wizards/Wizard.Services/Wizards.Services.csproj
+++ b/wizards/Wizard.Services/Wizards.Services.csproj
@@ -14,6 +14,7 @@
     <Folder Include="HeroService\" />
     <Folder Include="AuthorizationElements\Selector\" />
     <Folder Include="Inventory\" />
+    <Folder Include="ServiceRegistration\" />
   </ItemGroup>
 
 </Project>
