--- a/wizards/Wizards.Repository/Wizards.Repository.csproj
+++ b/wizards/Wizards.Repository/Wizards.Repository.csproj
@@ -40,6 +40,7 @@
 
   <ItemGroup>
     <Folder Include="DbConfiguration\" />
+    <Folder Include="WorldInstancesRepository\" />
   </ItemGroup>
 
 </Project>
