Refactore; Prepare to rework on CombatStage; Create new models DTO; Adjust Namespaces;

--- a/wizards/Wizards.GamePlay/Wizards.GamePlay.csproj
+++ b/wizards/Wizards.GamePlay/Wizards.GamePlay.csproj
@@ -11,8 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="CombatService\Enums\" />
+    <Folder Include="Mapping\" />
     <Folder Include="ServicesRegistration\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 
 </Project>
