Add CombatStageFactory; Add new TODO in services;

--- a/wizards/Wizards.GamePlay/Wizards.GamePlay.csproj
+++ b/wizards/Wizards.GamePlay/Wizards.GamePlay.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="Mapping\" />
+    <Folder Include="Factories\" />
     <Folder Include="ServicesRegistration\" />
   </ItemGroup>
 
