Add partial views; Add exploration model views and exploration controller;

--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -38,7 +38,7 @@
 
   <ItemGroup>
     <Folder Include="ModelViews\HeroModelViews\Properties\" />
-    <Folder Include="Views\WorldExploration\" />
+    <Folder Include="ModelViews\ExplorationModelViews\" />
     <Folder Include="wwwroot\Images\Buttons\" />
   </ItemGroup>
 
