Dummy grqaphics for test

--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -7,9 +7,13 @@
 
   <ItemGroup>
     <Compile Remove="ModelViews\PlayerDetailsDto\**" />
+    <Compile Remove="wwwroot\Images\Buttons\**" />
     <Content Remove="ModelViews\PlayerDetailsDto\**" />
+    <Content Remove="wwwroot\Images\Buttons\**" />
     <EmbeddedResource Remove="ModelViews\PlayerDetailsDto\**" />
+    <EmbeddedResource Remove="wwwroot\Images\Buttons\**" />
     <None Remove="ModelViews\PlayerDetailsDto\**" />
+    <None Remove="wwwroot\Images\Buttons\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -39,7 +43,6 @@
   <ItemGroup>
     <Folder Include="ModelViews\HeroModelViews\Properties\" />
     <Folder Include="ModelViews\ExplorationModelViews\" />
-    <Folder Include="wwwroot\Images\Buttons\" />
   </ItemGroup>
 
   <ItemGroup>
