Improve visual elements in Battle Gui; correct some issues;

--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -46,6 +46,27 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="wwwroot\css\BattleGuiStyles\CombatStyle.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\css\BattleGuiStyles\EnemyActionIcons.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\css\BattleGuiStyles\HealthBarsStyles.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\css\BattleGuiStyles\LogTable.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\css\BattleGuiStyles\PopUps.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\css\BattleGuiStyles\ResultsTextStyles.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\css\BattleGuiStyles\SkillBar.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\Images\logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
