Add exploration center and Titan Raids views, add some assets; modify addressing;

--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -75,4 +75,12 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Exploration\_TierTabContent.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Exploration\_TierTabContent.cshtml" />
+  </ItemGroup>
+
 </Project>
