add serilog configuration to project

--- a/wizards/WizardsWeb/appsettings.json
+++ b/wizards/WizardsWeb/appsettings.json
@@ -10,5 +10,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "Serilog": {
+    "MinimumLevel": "Warning",
+    "WriteTo": [
+      {
+        //"Name": "MSSqlServer",
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=.;Initial Catalog=WizardsDB;Integrated Security=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
+  },
+
   "AllowedHosts": "*"
 }
