--- a/wizards/WizardsWeb/appsettings.json
+++ b/wizards/WizardsWeb/appsettings.json
@@ -3,6 +3,7 @@
     "WizardDatabase": "Server=localhost;Database=WizardDB;Trusted_Connection=True;MultipleActiveResultSets=True;",
     "WizardsWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WizardsWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,7 +13,7 @@
   },
 
   "Serilog": {
-    "MinimumLevel": "Warning",
+    "MinimumLevel": "Information",
     "WriteTo": [
       {
         "Name": "MSSqlServer",
