cleaning appsettings and development.json

--- a/wizards/WizardsWeb/appsettings.Development.json
+++ b/wizards/WizardsWeb/appsettings.Development.json
@@ -1,9 +1,29 @@
 {
+  "ConnectionStrings": {
+    "WizardDatabase": "Server=localhost;Database=WizardDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=.;Initial Catalog=WizardsDB;Integrated Security=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
+  },
+
+  "AllowedHosts": "*"
 }
