fix error with logs table

--- a/wizards/WizardsWeb/appsettings.json
+++ b/wizards/WizardsWeb/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "WizardDatabase": "Server=localhost;Database=WizardDB;Trusted_Connection=True;MultipleActiveResultSets=True;",
-    "WizardsWebContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WizardsWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WizardDatabase": "Server=localhost;Database=WizardsDB;Trusted_Connection=True;MultipleActiveResultSets=True;",
   },
 
   "Logging": {
@@ -18,7 +17,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Data Source=.;Initial Catalog=WizardsDB;Integrated Security=True",
+          "connectionString": "WizardDatabase",
           "tableName": "Logs",
           "autoCreateSqlTable": true
         }
