--- a/wizards/WizardsWeb/appsettings.json
+++ b/wizards/WizardsWeb/appsettings.json
@@ -1,13 +1,13 @@
 {
   "ConnectionStrings": {
-    "WizardDatabase": "Server=localhost;Database=WizardsDB;Trusted_Connection=True;MultipleActiveResultSets=True;",
+    "WizardDatabase": "Server=localhost;Database=WizardsDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
   },
 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
 
