--- a/wizards/WizardsWeb/WizardsWeb.csproj
+++ b/wizards/WizardsWeb/WizardsWeb.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Wizard.Services\Wizards.Services.csproj" />
     <ProjectReference Include="..\Wizards.GamePlay\Wizards.GamePlay.csproj" />
+    <ProjectReference Include="..\Wizards.RankingAPI\Wizards.RankingAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
