--- a/wizards/Wizards.Repository/Wizards.Repository.csproj
+++ b/wizards/Wizards.Repository/Wizards.Repository.csproj
@@ -7,21 +7,29 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="InitialData\JSON\Enemies.json" />
-    <None Remove="InitialData\JSON\Items.json" />
-    <None Remove="InitialData\JSON\Skills.json" />
+    <None Remove="GameDataManagement\JSON\CoreAttributes.json" />
+    <None Remove="GameDataManagement\JSON\Enemies.json" />
+    <None Remove="GameDataManagement\JSON\FilesEvidence.json" />
+    <None Remove="GameDataManagement\JSON\Items.json" />
+    <None Remove="GameDataManagement\JSON\Skills.json" />
     <None Remove="TextRepo\Json\RestrictedWords.json" />
     <None Remove="TextRepo\Json\Value Errors.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="InitialData\JSON\Enemies.json">
+    <Content Include="GameDataManagement\JSON\Enemies.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="InitialData\JSON\Items.json">
+    <Content Include="GameDataManagement\JSON\Items.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="InitialData\JSON\Skills.json">
+    <Content Include="GameDataManagement\JSON\CoreAttributes.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GameDataManagement\JSON\FilesEvidence.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GameDataManagement\JSON\Skills.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="TextRepo\Json\RestrictedWords.json">
