--- a/wizards/Wizard.Services/Wizards.Services.csproj
+++ b/wizards/Wizard.Services/Wizards.Services.csproj
@@ -14,7 +14,14 @@
     <Folder Include="HeroService\" />
     <Folder Include="AuthorizationElements\Selector\" />
     <Folder Include="Inventory\" />
+    <Folder Include="ScheduleService\" />
     <Folder Include="ServiceRegistration\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Quartz" Version="3.5.0" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.5.0" />
+    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.5.0" />
   </ItemGroup>
 
 </Project>
