add filtering to rankingApi, registration services

--- a/wizards/Wizards.RankingAPI/appsettings.json
+++ b/wizards/Wizards.RankingAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WizardDatabase": "Server=localhost;Database=WizardsDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
