Simple refactoring of WIzardsLogger; Improved Serialization; Add Registration of new Services;

--- a/wizards/Wizards.LogsSender/Wizards.LogsSender.csproj
+++ b/wizards/Wizards.LogsSender/Wizards.LogsSender.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WizardsWeb\WizardsWeb.csproj" />
+    <Folder Include="ServiceRegistration\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Wizards.Core\Wizards.Core.csproj" />
   </ItemGroup>
 
 </Project>
